--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Wenxuan Yuan"
 title_separator          : "-"
 name                     : &name "Wenxuan Yuan"
 description              : &description "Welcome to my personal website"
-url                      : https://wenxuan52.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : "https://Wenxuan52.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Wenxuan52/wenxuan52.github.io"
 
@@ -22,10 +22,10 @@ repository               : "Wenxuan52/wenxuan52.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Wenxuan Yuan"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Postgraduate at Imperial College London\nPhD Candidate in Scientific Machine Learning"
   location         : "London"
   employer         : "Imperial College London"
   uri              : # URL
