--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Wenxuan Yuan"
   pronouns         : # example: "she/her"  
-  bio              : "Postgraduate at Imperial College London\nPhD Candidate in Scientific Machine Learning"
+  bio              : "Postgraduate at Imperial College London\nPhD Applicant in Scientific Machine Learning"
   location         : "London"
   employer         : "Imperial College London"
   uri              : # URL
