--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   avatar           : "profile.jpg"
   name             : "Wenxuan Yuan"
   pronouns         : # example: "she/her"  
-  bio              : "Postgraduate at Imperial College London\nPhD Candidate"
-  location         : "London"
+  bio              : "Postgraduate at Imperial College London\nPhD Applicant"
+  location         : "China"
   employer         : "Imperial College London"
   uri              : # URL
   email            : "wenxuan.yuan24@imperial.ac.uk" 
